--- a/index.html
+++ b/index.html
@@ -1,108 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ToGodBeTheGloryToday | Home</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: 'Times New Roman', serif; /* clean, classic font */
+      font-family: 'Times New Roman', serif;
       margin: 0;
       padding: 0;
-      background-color: #ffffff; /* white background */
-      color: #000000; /* black text */
+      background-color: #ffffff;
+      color: #333;
       line-height: 1.6;
     }
 
     header {
-      background-color: #ffffff; /* white header */
-      color: #000000;
-      padding: 2rem;
+      background-color: #2c3e50;
+      color: #fff;
       text-align: center;
+      padding: 2rem 1rem;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2.2rem;
     }
 
     header p {
       margin-top: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
     }
 
     nav ul {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       padding: 0;
       margin: 1rem 0;
-      gap: 2rem;
+      gap: 1.5rem;
     }
 
     nav ul li a {
-      color: #000000; /* black links */
+      color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
     }
 
-    .section-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      max-width: 1000px;
-      margin: 3rem auto;
+    main {
+      max-width: 1200px;
+      margin: 2rem auto;
       padding: 0 1rem;
     }
 
-    .section {
-      background-color: #ffffff;
-      padding: 2rem;
-      border-radius: 8px;
+    .hero {
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      transition: transform 0.2s;
+      margin-bottom: 3rem;
+    }
+
+    .hero img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .hero h2 {
+      margin-top: 1rem;
+      font-size: 1.8rem;
+      color: #2c3e50;
+    }
+
+    .section-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .section {
+      background-color: #f8f8f8;
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
     }
 
     .section:hover {
       transform: translateY(-5px);
     }
 
-    .section h2 {
-      margin-top: 0;
-      font-size: 1.8rem;
+    .section h3 {
+      font-size: 1.4rem;
+      margin-bottom: 0.8rem;
     }
 
     .section p {
       font-size: 1rem;
+      margin-bottom: 1rem;
     }
 
     .section a {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 10px 18px;
-      background-color: #000000; /* black button */
-      color: #ffffff; /* white text on button */
+      background-color: #2c3e50;
+      color: #fff;
       text-decoration: none;
+      padding: 0.6rem 1.2rem;
       border-radius: 5px;
+      font-weight: bold;
     }
 
     .section a:hover {
-      background-color: #333333;
+      background-color: #1a242f;
     }
 
     footer {
-      background-color: #ffffff;
-      color: #000000;
+      background-color: #2c3e50;
+      color: #fff;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
-      border-top: 1px solid #ccc;
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.8rem;
+      }
+
+      .hero h2 {
+        font-size: 1.4rem;
+      }
+
+      .section h3 {
+        font-size: 1.2rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .section p {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
@@ -110,46 +157,53 @@
 
   <header>
     <h1>ToGodBeTheGloryToday</h1>
-    <p>High-quality reproductions of Toni Wood's artwork, available in multiple sizes.</p>
+    <p>Featuring the artwork and creative vision of Toni Q. Wood</p>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="reproductions.html">Reproductions</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <main class="section-grid">
-    <div class="section">
-      <h2>Prints & Reproductions</h2>
-      <p>Explore high-quality reproductions of Toni's artwork in paper and canvas formats. Original artwork to be addes soon!.</p>
-      <a href="reproductions.html">Shop Prints</a>
+  <main>
+    <div class="hero">
+      <img src="https://raw.githubusercontent.com/kjlartsanctuary/togodbetheglorytoday/main/assets/images/toni-wood/Toni%203.jpg" alt="Toni Q. Wood">
+      <h2>Artist Toni Q. Wood</h2>
     </div>
 
-    <div class="section">
-      <h2>Artist Biography</h2>
-      <p>Learn about Toni’s journey, inspiration, and artistic story.</p>
-      <a href="biography.html">Read Biography</a>
-    </div>
+    <div class="section-grid">
+      <div class="section">
+        <h3>Prints & Reproductions</h3>
+        <p>Explore a beautiful selection of Toni’s fine art prints, available in a variety of sizes and formats.</p>
+        <a href="reproductions.html">View Prints</a>
+      </div>
 
-    <div class="section">
-      <h2>Contact</h2>
-      <p>Get in touch with Toni for commissions, questions, or collaborations.</p>
-      <a href="contact.html">Contact</a>
-    </div>
+      <div class="section">
+        <h3>Artist Biography</h3>
+        <p>Discover Toni’s journey and inspiration behind her creative work and passion for storytelling through art.</p>
+        <a href="biography.html">Read Biography</a>
+      </div>
 
-    <div class="section">
-      <h2>Follow on Social Media</h2>
-      <p>See new works, updates, and behind-the-scenes content from Toni Wood.</p>
-      <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Follow</a>
+      <div class="section">
+        <h3>Contact</h3>
+        <p>Reach out for inquiries, commissions, or exhibition opportunities.</p>
+        <a href="contact.html">Get in Touch</a>
+      </div>
+
+      <div class="section">
+        <h3>Follow on Social Media</h3>
+        <p>Stay connected with Toni Q. Wood and see new works, updates, and behind-the-scenes moments.</p>
+        <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Follow</a>
+      </div>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
