--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Toni Wood</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | ToGodBeTheGloryToday</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Georgia, 'Times New Roman', serif;
+      font-family: 'Times New Roman', serif;
       margin: 0;
       padding: 0;
       background-color: #ffffff;
-      color: #333333;
+      color: #333;
       line-height: 1.6;
     }
 
     header {
       background-color: #2c3e50;
-      color: white;
-      padding: 2rem;
+      color: #fff;
       text-align: center;
+      padding: 2rem 1rem;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 2.2rem;
     }
 
     nav ul {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       padding: 0;
-      margin: 1rem 0 0 0;
-      gap: 2rem;
+      margin: 1rem 0;
+      gap: 1.5rem;
     }
 
     nav ul li a {
-      color: white;
+      color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
       font-size: 1rem;
@@ -51,121 +51,138 @@
       text-decoration: underline;
     }
 
-    main.content {
-      max-width: 900px;
-      margin: 3rem auto;
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
       padding: 0 1rem;
-      text-align: left;
+      text-align: center;
     }
 
-    main.content h2 {
-      text-align: center;
-      font-size: 2rem;
+    h2 {
       color: #2c3e50;
-      margin-bottom: 1.5rem;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
     }
 
     form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-    }
-
-    label {
-      font-weight: bold;
+      background-color: #f8f8f8;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     input, textarea {
-      padding: 10px;
-      font-size: 1rem;
-      border-radius: 5px;
+      padding: 0.8rem;
       border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+      font-family: 'Times New Roman', serif;
       width: 100%;
     }
 
     textarea {
+      min-height: 150px;
       resize: vertical;
-      min-height: 120px;
     }
 
     button {
-      padding: 12px 20px;
-      font-size: 1rem;
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       border: none;
+      padding: 0.8rem;
+      font-size: 1rem;
       border-radius: 5px;
       cursor: pointer;
-      width: 150px;
-      align-self: center;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background-color: #1a252f;
+      background-color: #1a242f;
+    }
+
+    .contact-info {
+      margin-top: 2rem;
+      text-align: center;
+    }
+
+    .contact-info h3 {
+      color: #2c3e50;
+      margin-bottom: 0.5rem;
+    }
+
+    .contact-info p {
+      margin: 0.3rem 0;
     }
 
     footer {
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+      font-size: 0.9rem;
     }
 
-    a.social-link {
-      color: #2980b9;
-      text-decoration: none;
-      font-weight: bold;
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.8rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
     }
 
-    a.social-link:hover {
-      text-decoration: underline;
+    @media (max-width: 480px) {
+      form {
+        padding: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Contact Toni Wood</h1>
-    <p>Get in touch for commissions, questions, or collaborations</p>
+    <h1>Contact</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="originals.html">Original Art</a></li>
-      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="reproductions.html">Reproductions</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <main class="content">
-    <h2>Contact Form</h2>
+  <main>
+    <h2>Get in Touch</h2>
+    <p>If you’d like to contact artist <strong>Toni Q. Wood</strong> about reproductions, exhibitions, or collaborations, please fill out the form below.</p>
+
     <form action="#" method="post">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="subject">Subject</label>
-      <input type="text" id="subject" name="subject">
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" required></textarea>
-
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
 
-    <p style="text-align:center; margin-top:2rem;">
-      Or reach Toni on Instagram: 
-      <a href="https://www.instagram.com/ToniWoodArt" target="_blank" class="social-link">@ToniWoodArt</a>
-    </p>
+    <div class="contact-info">
+      <h3>Direct Contact</h3>
+      <p>Email: <a href="mailto:info@togodbetheglorytoday.com">info@togodbetheglorytoday.com</a></p>
+      <p>Instagram: <a href="https://www.instagram.com/ToniWoodArt" target="_blank">@ToniWoodArt</a></p>
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
