--- a/social.html
+++ b/social.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ToGodBeTheGloryToday | Contact</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Social | ToGodBeTheGloryToday</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Times New Roman', serif;
       margin: 0;
@@ -17,34 +21,30 @@
     header {
       background-color: #2c3e50;
       color: #fff;
-      padding: 2rem;
       text-align: center;
+      padding: 2rem 1rem;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 2.2rem;
     }
 
     nav ul {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       padding: 0;
       margin: 1rem 0;
-      gap: 2rem;
+      gap: 1.5rem;
     }
 
     nav ul li a {
       color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
 
     nav ul li a:hover {
@@ -55,36 +55,41 @@
       max-width: 900px;
       margin: 2rem auto;
       padding: 0 1rem;
-    }
-
-    .section {
-      margin-bottom: 2rem;
       text-align: center;
     }
 
-    .section h2 {
-      font-size: 2rem;
+    h2 {
+      color: #2c3e50;
+      font-size: 1.8rem;
       margin-bottom: 1rem;
     }
 
-    .section p {
+    p {
       font-size: 1.1rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .social-links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
     }
 
     .social-links a {
       display: inline-block;
-      margin: 0.5rem;
-      padding: 10px 18px;
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       text-decoration: none;
-      border-radius: 5px;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      font-size: 1.1rem;
       font-weight: bold;
+      transition: background 0.3s ease;
     }
 
     .social-links a:hover {
-      background-color: #1a252f;
+      background-color: #1a242f;
     }
 
     footer {
@@ -93,14 +98,26 @@
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+      font-size: 0.9rem;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
 
-      nav ul {
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      .social-links a {
+        font-size: 1rem;
+        padding: 0.8rem 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .social-links {
         flex-direction: column;
         gap: 1rem;
       }
@@ -110,39 +127,33 @@
 <body>
 
   <header>
-    <h1>Contact & Social</h1>
-    <p>Get in touch with Toni Wood or follow her latest artwork online.</p>
+    <h1>Connect with Toni Q. Wood</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="originals.html">Original Art</a></li>
-      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="reproductions.html">Reproductions</a></li>
       <li><a href="biography.html">Biography</a></li>
+      <li><a href="social.html">Social</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <main>
-    <div class="section">
-      <h2>Email</h2>
-      <p>Reach Toni for commissions, questions, or collaborations at:</p>
-      <p><a href="mailto:toniwood@example.com">toniwood@example.com</a></p>
-    </div>
+    <h2>Follow and Share</h2>
+    <p>Stay connected with <strong>Toni Q. Wood</strong> on social media. Follow her latest artwork, exhibitions, and creative updates across these platforms:</p>
 
-    <div class="section">
-      <h2>Follow on Social Media</h2>
-      <div class="social-links">
-        <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/ToniWoodArt" target="_blank">Facebook</a>
-        <a href="https://www.twitter.com/ToniWoodArt" target="_blank">Twitter</a>
-      </div>
+    <div class="social-links">
+      <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/ToniWoodArt" target="_blank">Facebook</a>
+      <a href="https://www.youtube.com/@KJLPodcastChannel" target="_blank">YouTube</a>
+      <a href="https://www.linkedin.com/in/ToniWoodArt" target="_blank">LinkedIn</a>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
