--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday Copyright</p>
   </footer>
 
 </body>
