--- a/reproductions.html
+++ b/reproductions.html
@@ -238,7 +238,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday Copyright</p>
   </footer>
 
   <!-- Lightbox -->
