--- a/contact.html
+++ b/contact.html
@@ -176,8 +176,7 @@
 
     <div class="contact-info">
       <h3>Direct Contact</h3>
-      <p>Email: <a href="mailto:info@togodbetheglorytoday.com">info@togodbetheglorytoday.com</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/ToniWoodArt" target="_blank">@ToniWoodArt</a></p>
+      <p>Email: <a href="mailto:twood485@verizon.net">twood485@verizon.net</a></p>
     </div>
   </main>
 
