--- a/social.html
+++ b/social.html
@@ -69,27 +69,15 @@
       margin-bottom: 2rem;
     }
 
-    .social-links {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.5rem;
-    }
-
-    .social-links a {
-      display: inline-block;
-      background-color: #2c3e50;
-      color: #fff;
-      text-decoration: none;
-      padding: 1rem 1.5rem;
-      border-radius: 8px;
-      font-size: 1.1rem;
+    .coming-soon {
+      font-size: 1.3rem;
       font-weight: bold;
-      transition: background 0.3s ease;
-    }
-
-    .social-links a:hover {
-      background-color: #1a242f;
+      color: #2c3e50;
+      background-color: #f2f2f2;
+      display: inline-block;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      border: 2px solid #2c3e50;
     }
 
     footer {
@@ -110,16 +98,9 @@
         font-size: 1.5rem;
       }
 
-      .social-links a {
-        font-size: 1rem;
-        padding: 0.8rem 1rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .social-links {
-        flex-direction: column;
-        gap: 1rem;
+      .coming-soon {
+        font-size: 1.1rem;
+        padding: 0.8rem 1.2rem;
       }
     }
   </style>
@@ -142,14 +123,9 @@
 
   <main>
     <h2>Follow and Share</h2>
-    <p>Stay connected with <strong>Toni Q. Wood</strong> on social media. Follow her latest artwork, exhibitions, and creative updates across these platforms:</p>
+    <p>Stay connected with <strong>Toni Q. Wood</strong> on social media. Links and updates will be added soon.</p>
 
-    <div class="social-links">
-      <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Instagram</a>
-      <a href="https://www.facebook.com/ToniWoodArt" target="_blank">Facebook</a>
-      <a href="https://www.youtube.com/@KJLPodcastChannel" target="_blank">YouTube</a>
-      <a href="https://www.linkedin.com/in/ToniWoodArt" target="_blank">LinkedIn</a>
-    </div>
+    <div class="coming-soon">Social Links Coming Soon</div>
   </main>
 
   <footer>
