--- a/biography.html
+++ b/biography.html
@@ -182,6 +182,29 @@
       </p>
     </div>
   </main>
+<div class="back-home">
+  <a href="index.html" class="btn-home">← Back to Home</a>
+</div>
+
+<style>
+  .back-home {
+    text-align: center;
+    margin: 2rem 0;
+  }
+  .btn-home {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    background: #000;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: background 0.3s ease;
+  }
+  .btn-home:hover {
+    background: #444;
+  }
+</style>
 
   <footer>
     <p>&copy; 2025 ToGodBeTheGloryToday Copyright</p>
